--- a/exercicios/MÓDULO 3/Desafio 12/style.css
+++ b/exercicios/MÓDULO 3/Desafio 12/style.css
@@ -1,10 +1,36 @@
 @charset "UTF8";
 
+@font-face {
+    font-family: 'indie-flower';
+    src: url('fontes/Indie_Flower/IndieFlower-Regular.ttf') format('opentype');
+}
+@font-face{
+    font-family: 'Sriracha';
+    src: url("fontes/Sriracha/Sriracha-Regular.ttf") format('opentype'); 
+}
+
+@font-face{
+    font-family: 'PassionOne';
+    src: url("fontes/PassionOne/PassionOne-Regular.ttf") format('opentype'); 
+}
+
+    :root {
+        --fonte-padrao:'Arial', 'Verdana', 'Helvetica', 'sans-serif';
+        --fonte-cabeçalho:'PassionOne', 'cursive'; 
+        --fonte-caligrafada: 'Sriracha', 'cursive' ;
+        --fonte-caligrafada2: 'indie-flowe', 'cursive';
+        
+    }
+
 
 *{ 
     margin: 0px;
     padding: 0px;
     
+}
+
+body{
+    background-color: white;
 }
 
 header{
@@ -17,14 +43,16 @@ header{
     font-size: 1em;
 }
 header > h1{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: var(--fonte-cabeçalho);
     font-variant: small-caps;
+    font-size: 4em;
     padding: 50px;
 
 }
 header > p{ 
     font-family: Arial, Helvetica, sans-serif;
     padding-bottom: 50px;
+    font-size: 1em;
 }
 
 a{
@@ -38,10 +66,16 @@ a:hover{
 
 section{
     background-color: white;
+    font-family: var(--fonte-caligrafada);
+    font-size: 1.5em;
     padding-top: 10vh;
     padding-bottom: 10vh;
-    line-height: 2em;
-    padding-left: 30px;
+    line-height: 2.5em;
+    padding-left: 50px;
+}
+
+section > p{
+    padding-bottom: 2em;
 }
 
 section.normal{
@@ -50,22 +84,61 @@ section.normal{
 }
 
 section.imagem{ 
-    background-color: black;
+    background-image:;
+    background-size: cover;
+    height: 500px;
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.623);
+    background-attachment: fixed;
+    
+}
+
+#imagem1{ 
+    background-image: url("imagens/background001.jpg");
+    background-position: center center;
+
+}
+
+#imagem2{
+    background-image: url("imagens/background002.jpg");
+    background-position: center center;
 }
 
 section.imagem > p{
-    background-color: rgba(80, 76, 76, 0.295);
+    background-color: rgba(10, 10, 10, 0.493);
+    padding: 10px;
     width: 300px;
+    text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.521);
 }
 
+section.video{
+    background-color: black;
+    height: 400px;
+    border-bottom: 3px;
+    border-left: 0px;
+    border-right: 0px;
+    border-color: white;
+    border-style: solid;
+    position: relative;
+}
+
+
+
+section.video > iframe{
+    position: absolute;
+    top: 5%;
+    left: 5%;
+    width: 90%;
+    height: 90%;
+}
 
 
 
 footer{
     background-color: black;
     color: white;
-    height: 30px;
+    height: 20px;
     text-align: center;
-    padding: 10px;
+    padding-top: 3vh;
+    padding-bottom: 2vh;
 }
